solutions/01/sock-shop/default-deny-all.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny-all
  namespace: sock-shop
spec:
  podSelector: {} # select all pods in the namespace
  policyTypes:
    - Ingress
    - Egress
  ingress: [] # Empty array = no rules; nothing is whitelisted
  egress: [] # Empty array = no rules; nothing is whitelisted
