solutions/01/sock-shop/order-db-policy.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: order-db-policy
  namespace: sock-shop
spec:
  podSelector:
    matchLabels:
      name: orders-db
  ingress:
    - from:
      - podSelector:
          matchLabels:
            name: orders
